--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "file-loader": "0.9.0",
     "isparta-loader": "2.0.0",
     "json-loader": "^0.5.4",
-    "json-server": "^0.8.16",
+    "json-server": "0.8.8",
     "karma": "1.1.1",
     "karma-chai": "0.1.0",
     "karma-chrome-launcher": "1.0.1",
