--- a/package.json
+++ b/package.json
@@ -33,75 +33,63 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "6.10.1",
-    "babel-core": "6.10.4",
-    "babel-eslint": "6.1.2",
-    "babel-loader": "6.2.4",
-    "babel-preset-es2015": "6.9.0",
-    "babel-preset-react": "6.11.1",
-    "babel-preset-stage-0": "6.5.0-1",
-    "body-parser": "^1.15.2",
+    "babel-cli": "6.18.0",
+    "babel-core": "6.20.0",
+    "babel-eslint": "7.1.1",
+    "babel-loader": "6.2.10",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-react": "6.16.0",
+    "babel-preset-stage-0": "6.16.0",
+    "body-parser": "1.15.2",
     "chai": "3.5.0",
     "codecov.io": "0.1.6",
-    "copy-webpack-plugin": "3.0.1",
-    "css-loader": "0.23.1",
-    "escape-string-regexp": "^1.0.5",
-    "esdoc": "0.4.7",
+    "copy-webpack-plugin": "4.0.1",
+    "css-loader": "0.26.1",
+    "escape-string-regexp": "1.0.5",
+    "esdoc": "0.4.8",
     "esdoc-es7-plugin": "0.0.3",
-    "eslint": "3.0.1",
-    "eslint-config-airbnb": "9.0.1",
-    "eslint-import-resolver-webpack": "0.3.2",
-    "eslint-loader": "1.4.1",
-    "eslint-plugin-flowtype": "2.3.0",
-    "eslint-plugin-import": "1.10.3",
-    "eslint-plugin-jsx-a11y": "2.0.1",
-    "eslint-plugin-react": "5.2.2",
+    "eslint": "3.12.2",
+    "eslint-config-airbnb": "13.0.0",
+    "eslint-import-resolver-webpack": "0.8.0",
+    "eslint-loader": "1.6.1",
+    "eslint-plugin-flowtype": "2.29.1",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-react": "6.8.0",
     "file-loader": "0.9.0",
     "isparta-loader": "2.0.0",
-    "json-loader": "^0.5.4",
-    "json-server": "0.8.8",
-    "karma": "1.1.1",
+    "json-loader": "0.5.4",
+    "json-server": "0.9.4",
+    "karma": "1.3.0",
     "karma-chai": "0.1.0",
-    "karma-chrome-launcher": "1.0.1",
-    "karma-coverage": "1.1.0",
-    "karma-mocha": "1.1.1",
-    "karma-mocha-reporter": "2.0.4",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-coverage": "1.1.1",
+    "karma-mocha": "1.3.0",
+    "karma-mocha-reporter": "2.2.1",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "1.7.0",
-    "mime": "^1.3.4",
-    "mocha": "3.0.0-1",
-    "multer": "^1.1.0",
+    "karma-webpack": "1.8.0",
+    "mime": "1.3.4",
+    "mocha": "3.2.0",
+    "multer": "1.2.1",
     "raw-loader": "^0.5.1",
-    "react-addons-test-utils": "15.2.1",
-    "react-hot-loader": "1.3.0",
+    "react-addons-test-utils": "15.4.1",
+    "react-hot-loader": "1.3.1",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack": "1.13.1",
-    "webpack-dev-server": "1.14.1",
-    "webpack-file-changer": "^1.0.0"
+    "webpack": "1.14.0",
+    "webpack-dev-server": "1.16.2",
+    "webpack-file-changer": "1.0.0"
   },
   "dependencies": {
-    "crypto-js": "3.1.8",
-    "es6-template-strings": "2.0.0",
+    "crypto-js": "3.1.9-1",
     "is-js": "0.1.1",
-    "js-criteria": "0.0.6",
     "nprogress": "0.2.0",
-    "numeral": "1.5.3",
-    "react": "15.3.0",
-    "react-addons-css-transition-group": "15.3.0",
-    "react-addons-shallow-compare": "15.3.0",
-    "react-bootstrap": "0.30.2",
-    "react-cookie": "0.4.7",
-    "react-datepicker": "0.29.0",
-    "react-dom": "15.3.0",
-    "react-highlight": "0.8.0",
-    "react-notifications": "1.2.0",
-    "react-quill": "0.4.1",
-    "react-router": "2.6.1",
-    "react-select": "0.9.1",
-    "react-star-rating": "1.4.2",
-    "react-treebeard": "1.1.2",
-    "robe-ajax": "1.0.0",
+    "react": "15.4.1",
+    "react-addons-css-transition-group": "15.4.1",
+    "react-bootstrap": "0.30.7",
+    "react-dom": "15.4.1",
+    "react-router": "3.0.0",
+    "react-treebeard": "1.1.4",
     "robe-react-commons": "1.0.68",
     "robe-react-ui": "1.1.3"
   }
