--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-router": "3.0.0",
     "react-treebeard": "1.1.4",
     "robe-react-commons": "1.0.68",
+    "robe-ajax": "1.0.0",
     "robe-react-ui": "1.1.4"
   }
 }
