--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
   "dependencies": {
     "crypto-js": "3.1.9-1",
     "is-js": "0.1.1",
+    "lodash": "4.17.2",
     "nprogress": "0.2.0",
     "react": "15.4.1",
     "react-addons-css-transition-group": "15.4.1",
@@ -90,8 +91,8 @@
     "react-dom": "15.4.1",
     "react-router": "3.0.0",
     "react-treebeard": "1.1.4",
-    "robe-react-commons": "1.0.68",
     "robe-ajax": "1.0.0",
-    "robe-react-ui": "1.1.4"
+    "robe-react-commons": "1.0.68",
+    "robe-react-ui": "1.1.6"
   }
 }
