--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robe-react-admin",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Robe React Admin Application",
   "main": "index.js",
   "scripts": {
@@ -8,9 +8,9 @@
     "testd": "karma start webpack.config.test.dev.js",
     "docs": "NODE_ENV=docs ./node_modules/.bin/esdoc -c esdoc.json",
     "codecov": "NODE_ENV=codecov cat coverage/*/lcov.info | codecov",
-    "build": "webpack --config webpack.config.build.js  --progress --profile --colors && babel ./src --out-dir ./lib  --copy-files",
+    "build": "node ./config/prebuild.js ./build & webpack --config config/webpack.config.build.js  --progress --profile --colors && babel ./src --out-dir ./build  --copy-files",
     "site": "webpack --config webpack.config.site.js  --progress --profile --colors",
-    "start": "webpack-dev-server --config webpack.config.dev.js --colors"
+    "start": "webpack-dev-server --config config/webpack.config.dev.js --colors"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "app-root-path": "^2.0.1",
     "babel-cli": "6.18.0",
     "babel-core": "6.20.0",
     "babel-eslint": "7.1.1",
@@ -59,7 +60,6 @@
     "file-loader": "0.9.0",
     "isparta-loader": "2.0.0",
     "json-loader": "0.5.4",
-    "json-server": "0.9.4",
     "karma": "1.3.0",
     "karma-chai": "0.1.0",
     "karma-chrome-launcher": "2.0.0",
@@ -74,6 +74,7 @@
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "15.4.1",
     "react-hot-loader": "1.3.1",
+    "robe-json-server": "^0.8.19",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
