--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "app-root-path": "^2.0.1",
+    "app-root-path": "2.0.1",
     "babel-cli": "6.18.0",
-    "babel-core": "6.20.0",
+    "babel-core": "6.21.0",
     "babel-eslint": "7.1.1",
     "babel-loader": "6.2.10",
     "babel-preset-es2015": "6.18.0",
@@ -47,7 +47,7 @@
     "copy-webpack-plugin": "4.0.1",
     "css-loader": "0.26.1",
     "escape-string-regexp": "1.0.5",
-    "esdoc": "0.4.8",
+    "esdoc": "0.5.1",
     "esdoc-es7-plugin": "0.0.3",
     "eslint": "3.12.2",
     "eslint-config-airbnb": "13.0.0",
@@ -67,14 +67,14 @@
     "karma-mocha": "1.3.0",
     "karma-mocha-reporter": "2.2.1",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "1.8.0",
+    "karma-webpack": "1.8.1",
     "mime": "1.3.4",
     "mocha": "3.2.0",
     "multer": "1.2.1",
-    "raw-loader": "^0.5.1",
+    "raw-loader": "0.5.1",
     "react-addons-test-utils": "15.4.1",
     "react-hot-loader": "1.3.1",
-    "robe-json-server": "^0.8.19",
+    "robe-json-server": "0.8.19",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
@@ -84,7 +84,7 @@
   "dependencies": {
     "crypto-js": "3.1.9-1",
     "is-js": "0.1.1",
-    "lodash": "4.17.2",
+    "lodash": "4.17.3",
     "nprogress": "0.2.0",
     "react": "15.4.1",
     "react-addons-css-transition-group": "15.4.1",
@@ -92,8 +92,8 @@
     "react-dom": "15.4.1",
     "react-router": "3.0.0",
     "react-treebeard": "1.1.4",
-    "robe-ajax": "1.0.0",
-    "robe-react-commons": "1.0.68",
-    "robe-react-ui": "1.1.6"
+    "robe-ajax": "1.0.1",
+    "robe-react-commons": "1.0.70",
+    "robe-react-ui": "1.1.7"
   }
 }
