--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "app-root-path": "2.0.1",
+    "app-root-path": "^2.0.1",
     "babel-cli": "6.18.0",
-    "babel-core": "6.21.0",
+    "babel-core": "6.20.0",
     "babel-eslint": "7.1.1",
     "babel-loader": "6.2.10",
     "babel-preset-es2015": "6.18.0",
@@ -47,7 +47,7 @@
     "copy-webpack-plugin": "4.0.1",
     "css-loader": "0.26.1",
     "escape-string-regexp": "1.0.5",
-    "esdoc": "0.5.1",
+    "esdoc": "0.4.8",
     "esdoc-es7-plugin": "0.0.3",
     "eslint": "3.12.2",
     "eslint-config-airbnb": "13.0.0",
@@ -93,7 +93,7 @@
     "react-router": "3.0.0",
     "react-treebeard": "1.1.4",
     "robe-ajax": "1.0.1",
-    "robe-react-commons": "1.0.71",
-    "robe-react-ui": "1.1.7"
+    "robe-react-commons": "1.0.80",
+    "robe-react-ui": "1.1.16"
   }
 }
